navbar section completed with mobile responsive

--- a/index.html
+++ b/index.html
@@ -7,11 +7,34 @@
     <!-- CSS Link Tags Here -->
     <link rel="stylesheet" href="./assets/styles/style.css" />
     <link rel="stylesheet" href="./assets/styles/responsive.css" />
+    <script
+      src="https://kit.fontawesome.com/68a7a7f221.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Title Tags Here -->
     <title>GoMove Travel - Worldwide Service</title>
   </head>
   <body>
-    <header></header>
+    <header class="content-wrapper">
+      <!-- Navbar Starts Here -->
+      <nav class="navbar">
+        <div class="nav-logo">
+          <img src="./assets/image/logo.png" alt="" />
+          <h2>GoMove <span>Travel</span></h2>
+        </div>
+        <div class="nav-items">
+          <a class="nav-item-active" href="#">Home</a>
+          <a href="#">Packages</a>
+          <a href="#">Testimonial</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact</a>
+        </div>
+        <div class="toggle-btn">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </nav>
+      <!-- Navbar Starts End -->
+    </header>
     <main></main>
     <footer></footer>
   </body>
