banner  section completed with mobile responsive

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="content-wrapper">
-      <!-- Navbar Starts Here -->
+      <!-- Navbar Start Here -->
       <nav class="navbar">
         <div class="nav-logo">
           <img src="./assets/image/logo.png" alt="" />
@@ -33,7 +33,39 @@
           <i class="fa-solid fa-bars"></i>
         </div>
       </nav>
-      <!-- Navbar Starts End -->
+      <!-- Navbar End End -->
+      <!-- Banner Section Start Here -->
+      <div class="banner">
+        <div class="banner-content">
+          <h1 class="primary-title">Explore Your Travel</h1>
+          <p class="primary-text-des">
+            lor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
+            adipiscing. In <br>
+            et odio enim ac quis sapien urna eu phasellus.
+          </p>
+          <div class="banner-travel-find-now-box">
+            <input type="text" name="go" id="go" placeholder="Where go" />
+            <select name="when" id="when">
+              <option value="when">When</option>
+              <option value="maldive">Maldive</option>
+              <option value="uk">Uk</option>
+              <option value="indonesia">Indonesia</option>
+              <option value="srilanka">Srilanka</option>
+            </select>
+            <select name="when" id="when">
+              <option value="selectType">Select Type</option>
+              <option value="Maldive">Maldive</option>
+              <option value="us">US</option>
+              <option value="indonesia">Indonesia</option>
+              <option value="srilanka">v</option>
+            </select>
+            <button class="btn-primary">
+              <i class="fa-solid fa-magnifying-glass"></i> Find Now
+            </button>
+          </div>
+        </div>
+      </div>
+      <!-- Banner Section End Here -->
     </header>
     <main></main>
     <footer></footer>
