our populer tours  section completed with mobile responsive

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <h1 class="primary-title">Explore Your Travel</h1>
           <p class="primary-text-des">
             lor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
-            adipiscing. In <br>
+            adipiscing. In <br />
             et odio enim ac quis sapien urna eu phasellus.
           </p>
           <div class="banner-travel-find-now-box">
@@ -67,7 +67,45 @@
       </div>
       <!-- Banner Section End Here -->
     </header>
-    <main></main>
+    <main class="content-wrapper">
+      <!-- Our Popular Tours Section Start Here -->
+      <section class="our-popler-tours">
+        <div class="our-popler-tours-content">
+          <h2 class="secondary-title">Our Popular Tours</h2>
+          <p class="primary-text-des">
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
+          <ul>
+            <li class="primary-text-des">
+              Tempus euismod lacus mauris dignissim quis in ultrices. Magna
+              nullam odio neque diam. Sociis erat at .
+            </li>
+            <li class="primary-text-des">
+              Tempus euismod lacus mauris dignissim quis in ultrices. Magna
+              nullam odio neque diam. Sociis erat at .
+            </li>
+            <li class="primary-text-des">
+              Tempus euismod lacus mauris dignissim quis in ultrices. Magna
+              nullam odio neque diam. Sociis erat at .
+            </li>
+          </ul>
+          <p class="secondary-text-des">
+            Amet consectetur. Vulputate commodo felis molestie risus ornare
+            nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+            Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus
+            semper tincidunt.
+          </p>
+          <button class="btn-primary">Read More</button>
+        </div>
+        <img
+          src="./assets/image/popular_tour.png"
+          alt=""
+          class="our-popler-tours-img"
+        />
+      </section>
+      <!-- Our Popular Tours Section End Here -->
+    </main>
     <footer></footer>
   </body>
 </html>
