chooes your sestination section completed with responsive

--- a/index.html
+++ b/index.html
@@ -105,6 +105,61 @@
         />
       </section>
       <!-- Our Popular Tours Section End Here -->
+      <!-- Choose Your Destination Section Start Here -->
+      <section class="choose-your-destination">
+        <div class="destination-content">
+          <h2 class="secondary-title">Choose Your Destination</h2>
+          <p class="secondary-text-des">
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. <br> Sodales dictumst nec nibh pellentesque.
+          </p>
+        </div>
+        <div class="destination-img-gellary">
+          <div class="destination-1">
+            <div class="destination-img-name">
+              <img src="./assets/image/destination1.png" alt="" />
+              <h4>Maldives</h4>
+            </div>
+          </div>
+          <div class="destination-2">
+            <div class="destination-img-name">
+              <img src="./assets/image/destination2.png" alt="" />
+              <h4>Indonesia</h4>
+            </div>
+          </div>
+          <div class="destination-3">
+            <div class="destination-img-name">
+              <img src="./assets/image/destination3.png" alt="" />
+              <h4>Srilanka</h4>
+            </div>
+          </div>
+          <div class="destination-4">
+            <div class="destination-img-name">
+              <img src="./assets/image/destination4.png" alt="" />
+              <h4>North America</h4>
+            </div>
+          </div>
+          <div class="destination-5">
+            <div class="destination-img-name">
+              <img src="./assets/image/destination5.png" alt="" />
+              <h4>Kashmir</h4>
+            </div>
+          </div>
+          <div class="destination-6">
+            <div class="destination-img-name">
+              <img src="./assets/image/destination6.png" alt="" />
+              <h4>Bangladesh</h4>
+            </div>
+          </div>
+          <div class="destination-7">
+            <div class="destination-img-name">
+              <img src="./assets/image/destination7.png" alt="" />
+              <h4>Bandarban</h4>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Choose Your Destination Section End Here -->
     </main>
     <footer></footer>
   </body>
