why choose us service section completed with responsive

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
           <h2 class="secondary-title">Choose Your Destination</h2>
           <p class="secondary-text-des">
             Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
-            odio sit massa. <br> Sodales dictumst nec nibh pellentesque.
+            odio sit massa. <br />
+            Sodales dictumst nec nibh pellentesque.
           </p>
         </div>
         <div class="destination-img-gellary">
@@ -160,6 +161,53 @@
         </div>
       </section>
       <!-- Choose Your Destination Section End Here -->
+      <!-- Why Choose Us Section Start Here -->
+      <div class="why-choose-us">
+        <div class="why-choose-us-content">
+          <h2 class="secondary-title">Why Choose Us</h2>
+          <p class="secondary-text-des">
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. <br />
+            Sodales dictumst nec nibh pellentesque.
+          </p>
+        </div>
+        <div class="why-choose-us-service">
+          <div class="why-choose-us-service-col-1">
+            <div class="why-choose-us-service-box">
+              <img src="./assets/icons/hotel.svg" alt="" />
+              <h4 class="why-choose-us-title">Handpicked Hotels</h4>
+              <p class="secondadry-text-des">
+                Amet consectetur. Vulputate commodo felis molestie risus ornare
+                nulla amet et. Libero commodo sagittis dignissim adipiscing
+                quis. Habitant adipiscing risus natoque aliquet.
+              </p>
+            </div>
+            <div class="why-choose-us-service-box-2">
+              <img src="./assets/icons/hotel.svg" alt="" />
+              <h4 class="why-choose-us-title">Handpicked Hotels</h4>
+              <p class="secondadry-text-des">
+                Amet consectetur. Vulputate commodo felis molestie risus ornare
+                nulla amet et. Libero commodo sagittis dignissim adipiscing
+                quis. Habitant adipiscing risus natoque aliquet.
+              </p>
+            </div>
+          </div>
+          <div class="why-choose-us-service-col-2">
+            <div class="why-choose-us-service-col-2-wrapper">
+              <div class="why-choose-us-service-box">
+                <img src="./assets/icons/price.svg" alt="" />
+                <h4 class="why-choose-us-title">Best Price Guarantee</h4>
+                <p class="secondadry-text-des">
+                  Amet consectetur. Vulputate commodo felis molestie risus
+                  ornare nulla amet et. Libero commodo sagittis dignissim
+                  adipiscing quis. Habitant adipiscing risus natoque aliquet.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Why Choose Us Section End Here -->
     </main>
     <footer></footer>
   </body>
