nesletter subscription image discount  section completed with responsive

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       </section>
       <!-- Choose Your Destination Section End Here -->
       <!-- Why Choose Us Section Start Here -->
-      <div class="why-choose-us">
+      <section class="why-choose-us">
         <div class="why-choose-us-content">
           <h2 class="secondary-title">Why Choose Us</h2>
           <p class="secondary-text-des">
@@ -206,8 +206,25 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
       <!-- Why Choose Us Section End Here -->
+      <!-- Newsletter Subscription Section Start Here -->
+      <div class="newsletter-subscription-discount">
+        <div class="newsletter-subscription-box">
+          <h4>Newsletter</h4>
+          <p class="secondary-text-des">
+            Get your daily dose of travel news & tips. Sign up today!
+          </p>
+          <hr />
+          <input type="text" placeholder="Enter your name" />
+          <input type="email" placeholder="Enter your email" />
+          <button>Subscribe</button>
+        </div>
+        <div class="newsletter-discont-img">
+          <img src="./assets/image/newsletter_img.png" alt="" />
+        </div>
+      </div>
+      <!-- Newsletter Subscription Section End Here -->
     </main>
     <footer></footer>
   </body>
