footer section and main website completed with responsive

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       </section>
       <!-- Why Choose Us Section End Here -->
       <!-- Newsletter Subscription Section Start Here -->
-      <div class="newsletter-subscription-discount">
+      <section class="newsletter-subscription-discount">
         <div class="newsletter-subscription-box">
           <h4>Newsletter</h4>
           <p class="secondary-text-des">
@@ -223,9 +223,31 @@
         <div class="newsletter-discont-img">
           <img src="./assets/image/newsletter_img.png" alt="" />
         </div>
-      </div>
+      </section>
       <!-- Newsletter Subscription Section End Here -->
     </main>
-    <footer></footer>
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer">
+          <div class="footer-logo">
+            <img src="./assets/image/logo.png" alt="" />
+            <h2>GoMove <span>Travel</span></h2>
+          </div>
+          <p class="secondary-text-des">
+            Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi
+            vitae blandit orci potenti vulputate. Leo <br />
+            erat maecenas vitae elementum ultricies nullam.
+          </p>
+          <div class="footer-social-icons">
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-github"></i>
+          </div>
+          <hr />
+          <p class="secondary-text-des">2024, All Rights Reserved</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
