Vacation Bundles section completed with responsive

--- a/index.html
+++ b/index.html
@@ -105,6 +105,71 @@
         />
       </section>
       <!-- Our Popular Tours Section End Here -->
+      <!-- Affordable Vacation Bundles Section Start Here -->
+      <section class="vacation-bundles">
+        <div class="vacation-bundles-content">
+          <h2 class="secondary-title">Affordable Vacation Bundles</h2>
+          <p class="secondary-text-des">
+            Officia similique, commodi perspiciatis obcaecati vel iure dolor
+            itaque blanditiis, nobis ratione numquam. <br />Quis unde quisquam
+            reiciendis pariatur quam atque! Magnam, eveniet.
+          </p>
+        </div>
+        <div class="vacation-bundles-packages">
+          <div class="vacation-bundle-package">
+            <img src="./assets/image/package-card-img1.png" alt="" />
+            <h3>Indonesia Flying</h3>
+            <p class="secondary-text-des">
+              consectetur adipisicing elit. Veritatis aliquid qui sint vitae,
+              consequuntur dicta?
+            </p>
+            <div class="reviwes-location-day-price">
+              <p><i class="fa-solid fa-star"></i>4.5 (32Reviews)</p>
+              <p><i class="fa-solid fa-location-dot"></i>Indonisia Flying</p>
+              <hr />
+              <div class="day-price">
+                <p><i class="fa-regular fa-clock"></i>3 Day</p>
+                <h4>$312</h4>
+              </div>
+            </div>
+          </div>
+          <div class="vacation-bundle-package">
+            <img src="./assets/image/package-card-img2.png" alt="" />
+            <h3>India Taj Mahal</h3>
+            <p class="secondary-text-des">
+              consectetur adipisicing elit. Veritatis aliquid qui sint vitae,
+              consequuntur dicta?
+            </p>
+            <div class="reviwes-location-day-price">
+              <p><i class="fa-solid fa-star"></i>4.5 (22Reviews)</p>
+              <p><i class="fa-solid fa-location-dot"></i>India, Taj Mahal</p>
+              <hr />
+              <div class="day-price">
+                <p><i class="fa-regular fa-clock"></i>4 Day</p>
+                <h4>$641</h4>
+              </div>
+            </div>
+          </div>
+          <div class="vacation-bundle-package">
+            <img src="./assets/image/package-card-img3.png" alt="" />
+            <h3>Brazil Flying</h3>
+            <p class="secondary-text-des">
+              consectetur adipisicing elit. Veritatis aliquid qui sint vitae,
+              consequuntur dicta?
+            </p>
+            <div class="reviwes-location-day-price">
+              <p><i class="fa-solid fa-star"></i>4.5 (41Reviews)</p>
+              <p><i class="fa-solid fa-location-dot"></i>Brazil, Rio de Janeiro</p>
+              <hr />
+              <div class="day-price">
+                <p><i class="fa-regular fa-clock"></i>3 Day</p>
+                <h4>$467</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Affordable Vacation Bundles Section End Here -->
       <!-- Choose Your Destination Section Start Here -->
       <section class="choose-your-destination">
         <div class="destination-content">
