vacation bundle package button added

--- a/index.html
+++ b/index.html
@@ -125,13 +125,18 @@
             </p>
             <div class="reviwes-location-day-price">
               <p><i class="fa-solid fa-star"></i>4.5 (32Reviews)</p>
-              <p><i class="fa-solid fa-location-dot"></i>Indonisia Flying</p>
+              <p>
+                <i class="fa-solid fa-location-dot"></i>Indonisia, Waterbom Bali
+              </p>
               <hr />
               <div class="day-price">
                 <p><i class="fa-regular fa-clock"></i>3 Day</p>
                 <h4>$312</h4>
               </div>
             </div>
+            <button class="btn-primary">
+              <i class="fa-solid fa-plane-departure"></i>Book A Trip
+            </button>
           </div>
           <div class="vacation-bundle-package">
             <img src="./assets/image/package-card-img2.png" alt="" />
@@ -149,6 +154,9 @@
                 <h4>$641</h4>
               </div>
             </div>
+            <button class="btn-primary">
+              <i class="fa-solid fa-plane-departure"></i>Book A Trip
+            </button>
           </div>
           <div class="vacation-bundle-package">
             <img src="./assets/image/package-card-img3.png" alt="" />
@@ -159,13 +167,18 @@
             </p>
             <div class="reviwes-location-day-price">
               <p><i class="fa-solid fa-star"></i>4.5 (41Reviews)</p>
-              <p><i class="fa-solid fa-location-dot"></i>Brazil, Rio de Janeiro</p>
+              <p>
+                <i class="fa-solid fa-location-dot"></i>Brazil, Rio de Janeiro
+              </p>
               <hr />
               <div class="day-price">
                 <p><i class="fa-regular fa-clock"></i>3 Day</p>
                 <h4>$467</h4>
               </div>
             </div>
+            <button class="btn-primary">
+              <i class="fa-solid fa-plane-departure"></i>Book A Trip
+            </button>
           </div>
         </div>
       </section>
