newslatter img area section update

--- a/index.html
+++ b/index.html
@@ -300,6 +300,10 @@
         </div>
         <div class="newsletter-discont-img">
           <img src="./assets/image/newsletter_img.png" alt="" />
+          <div class="discouont-box">
+            <p>gomovetravel.com</p>
+            <h3>Save Up To 70%</h3>
+          </div>
         </div>
       </section>
       <!-- Newsletter Subscription Section End Here -->
