meaning text added full website

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <div class="banner-content">
           <h1 class="primary-title">Explore Your Travel</h1>
           <p class="primary-text-des">
-            lor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
-            adipiscing. In <br />
-            et odio enim ac quis sapien urna eu phasellus.
+            Embark on a journey of discovery, where every destination becomes a
+            canvas of experiences.<br />
+            Let us inspire your wanderlust and redefine your adventure.
           </p>
           <div class="banner-travel-find-now-box">
             <input type="text" name="go" id="go" placeholder="Where go" />
@@ -73,28 +73,41 @@
         <div class="our-popler-tours-content">
           <h2 class="secondary-title">Our Popular Tours</h2>
           <p class="primary-text-des">
-            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
-            odio sit massa. Sodales dictumst nec nibh pellentesque.
+            At GoMoveTravel, our commitment to providing exceptional travel
+            experiences comes to life through our carefully curated "Popular
+            Tours" section. Each journey is designed to offer a blend of
+            cultural immersion, scenic wonders, and hassle-free exploration,
+            making it no surprise that these tours have become favorites among
+            our discerning travelers.
           </p>
           <ul>
             <li class="primary-text-des">
-              Tempus euismod lacus mauris dignissim quis in ultrices. Magna
-              nullam odio neque diam. Sociis erat at .
+              <strong>Cultural Immersion: </strong>Our Popular Tours emphasize
+              authentic cultural experiences that go beyond the surface.
+              Travelers can engage with local traditions, savor culinary
+              delights, and connect with the rich heritage of the places they
+              visit.
             </li>
             <li class="primary-text-des">
-              Tempus euismod lacus mauris dignissim quis in ultrices. Magna
-              nullam odio neque diam. Sociis erat at .
+              <strong>Scenic Wonders: </strong>Nature's breathtaking beauty
+              takes center stage in our Popular Tours. Whether it's the
+              panoramic views of mountain landscapes, serene coastal retreats.
+              Travelers can capture picture-perfect moments and create lasting
+              memories surrounded by the world's most stunning scenery.
             </li>
             <li class="primary-text-des">
-              Tempus euismod lacus mauris dignissim quis in ultrices. Magna
-              nullam odio neque diam. Sociis erat at .
+              <strong>Hassle-Free Exploration: </strong>We understand that the
+              best journeys are stress-free, allowing travelers to focus on the
+              experience rather than logistics. providing seamless
+              transportation, comfortable accommodations, and knowledgeable
+              guides.
             </li>
           </ul>
           <p class="secondary-text-des">
-            Amet consectetur. Vulputate commodo felis molestie risus ornare
-            nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
-            Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus
-            semper tincidunt.
+            In essence, GoMoveTravel's Popular Tours offer a harmonious blend of
+            cultural enrichment, natural beauty, and convenience. simply enjoy a
+            hassle-free exploration, Explore the world with us and redefine the
+            way you experience each destination.
           </p>
           <button class="btn-primary">Read More</button>
         </div>
@@ -110,9 +123,8 @@
         <div class="vacation-bundles-content">
           <h2 class="secondary-title">Affordable Vacation Bundles</h2>
           <p class="secondary-text-des">
-            Officia similique, commodi perspiciatis obcaecati vel iure dolor
-            itaque blanditiis, nobis ratione numquam. <br />Quis unde quisquam
-            reiciendis pariatur quam atque! Magnam, eveniet.
+            Elevate Your Savings, Elevate Your Adventures. Explore the World on
+            a Budget with <br />Our Unbeatable Affordable Vacation Bundles!
           </p>
         </div>
         <div class="vacation-bundles-packages">
@@ -120,8 +132,8 @@
             <img src="./assets/image/package-card-img1.png" alt="" />
             <h3>Indonesia Flying</h3>
             <p class="secondary-text-des">
-              consectetur adipisicing elit. Veritatis aliquid qui sint vitae,
-              consequuntur dicta?
+              Immerse yourself in the magic of Indonesia, featuring a thrilling
+              escape to Waterbom Bali.
             </p>
             <div class="reviwes-location-day-price">
               <p><i class="fa-solid fa-star"></i>4.5 (32Reviews)</p>
@@ -142,8 +154,7 @@
             <img src="./assets/image/package-card-img2.png" alt="" />
             <h3>India Taj Mahal</h3>
             <p class="secondary-text-des">
-              consectetur adipisicing elit. Veritatis aliquid qui sint vitae,
-              consequuntur dicta?
+              Unveiling the majestic history of the Taj Mahal and beyond.
             </p>
             <div class="reviwes-location-day-price">
               <p><i class="fa-solid fa-star"></i>4.5 (22Reviews)</p>
@@ -162,8 +173,8 @@
             <img src="./assets/image/package-card-img3.png" alt="" />
             <h3>Brazil Flying</h3>
             <p class="secondary-text-des">
-              consectetur adipisicing elit. Veritatis aliquid qui sint vitae,
-              consequuntur dicta?
+              Rio de Janeiro ensures a vibrant mix of culture, beaches, and
+              iconic landmarks!
             </p>
             <div class="reviwes-location-day-price">
               <p><i class="fa-solid fa-star"></i>4.5 (41Reviews)</p>
@@ -188,9 +199,10 @@
         <div class="destination-content">
           <h2 class="secondary-title">Choose Your Destination</h2>
           <p class="secondary-text-des">
-            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
-            odio sit massa. <br />
-            Sodales dictumst nec nibh pellentesque.
+            Discover Your Escape: GoMoveTravel's 'Choose Your
+            Destination'—Embark on a personalized journey as <br />
+            you explore our curated destinations, each promising unique
+            experiences.
           </p>
         </div>
         <div class="destination-img-gellary">
@@ -244,9 +256,9 @@
         <div class="why-choose-us-content">
           <h2 class="secondary-title">Why Choose Us</h2>
           <p class="secondary-text-des">
-            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
-            odio sit massa. <br />
-            Sodales dictumst nec nibh pellentesque.
+            Your Passport to Unmatched Adventures – Seamless Planning,
+            Handpicked Hotels, World-Class Service <br />
+            and Best Price Guarantee. Elevate Your Journey Adventures Today!
           </p>
         </div>
         <div class="why-choose-us-service">
@@ -254,19 +266,21 @@
             <div class="why-choose-us-service-box">
               <img src="./assets/icons/hotel.svg" alt="" />
               <h4 class="why-choose-us-title">Handpicked Hotels</h4>
-              <p class="secondadry-text-des">
-                Amet consectetur. Vulputate commodo felis molestie risus ornare
-                nulla amet et. Libero commodo sagittis dignissim adipiscing
-                quis. Habitant adipiscing risus natoque aliquet.
+              <p class="secondary-text-des">
+                Experience travel like never before with GoMoveTravel, Our
+                Handpicked Hotels selection ensures unparalleled comfort and
+                style. Trust us to elevate your travel experience, providing
+                accommodations that reflect the essence of each destination.
               </p>
             </div>
             <div class="why-choose-us-service-box-2">
-              <img src="./assets/icons/hotel.svg" alt="" />
-              <h4 class="why-choose-us-title">Handpicked Hotels</h4>
-              <p class="secondadry-text-des">
-                Amet consectetur. Vulputate commodo felis molestie risus ornare
-                nulla amet et. Libero commodo sagittis dignissim adipiscing
-                quis. Habitant adipiscing risus natoque aliquet.
+              <img src="./assets/icons/map.svg" alt="" />
+              <h4 class="why-choose-us-title">World Class Service</h4>
+              <p class="secondary-text-des">
+                We redefine your travel experience with World Class Service. Our
+                commitment is to deliver unparalleled excellence in every aspect
+                of your journey. Choose GoMoveTravel for a world-class travel
+                experience.
               </p>
             </div>
           </div>
@@ -275,10 +289,13 @@
               <div class="why-choose-us-service-box">
                 <img src="./assets/icons/price.svg" alt="" />
                 <h4 class="why-choose-us-title">Best Price Guarantee</h4>
-                <p class="secondadry-text-des">
-                  Amet consectetur. Vulputate commodo felis molestie risus
-                  ornare nulla amet et. Libero commodo sagittis dignissim
-                  adipiscing quis. Habitant adipiscing risus natoque aliquet.
+                <p class="secondary-text-des">
+                  GoMoveTravel and indulge in worry-free wanderlust with our
+                  Best Price Guarantee. We are committed to offering you the
+                  most competitive rates without compromising on quality. Trust
+                  us to provide budget-friendly options without sacrificing the
+                  joy of travel. Your dream vacations are the best prices—only
+                  with GoMoveTravel.
                 </p>
               </div>
             </div>
@@ -291,6 +308,7 @@
         <div class="newsletter-subscription-box">
           <h4>Newsletter</h4>
           <p class="secondary-text-des">
+            New Deails, New Offers. <br />
             Get your daily dose of travel news & tips. Sign up today!
           </p>
           <hr />
@@ -316,9 +334,9 @@
             <h2>GoMove <span>Travel</span></h2>
           </div>
           <p class="secondary-text-des">
-            Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi
-            vitae blandit orci potenti vulputate. Leo <br />
-            erat maecenas vitae elementum ultricies nullam.
+            Remember that happiness is a way of travel – not a destination.
+            <br />
+            The most beautiful in the world is, You Trust GoMove Travel.
           </p>
           <div class="footer-social-icons">
             <i class="fa-brands fa-twitter"></i>
