banner section update custome arrow

--- a/index.html
+++ b/index.html
@@ -45,20 +45,29 @@
           </p>
           <div class="banner-travel-find-now-box">
             <input type="text" name="go" id="go" placeholder="Where go" />
-            <select name="when" id="when">
-              <option value="when">When</option>
-              <option value="maldive">Maldive</option>
-              <option value="uk">Uk</option>
-              <option value="indonesia">Indonesia</option>
-              <option value="srilanka">Srilanka</option>
-            </select>
-            <select name="when" id="when">
-              <option value="selectType">Select Type</option>
-              <option value="Maldive">Maldive</option>
-              <option value="us">US</option>
-              <option value="indonesia">Indonesia</option>
-              <option value="srilanka">v</option>
-            </select>
+            <div class="selecter-wrapper">
+              <select name="when" id="when">
+                <option value="when">When</option>
+                <option value="maldive">Maldive</option>
+                <option value="uk">Uk</option>
+                <option value="indonesia">Indonesia</option>
+                <option value="srilanka">Srilanka</option>
+              </select>
+              <div class="selecter-custome-arrow">
+                <i class="fa-solid fa-chevron-down"></i>
+              </div>
+            </div>
+            <div class="selecter-wrapper">
+              <select name="when" id="when">
+                <option value="selectType">Select Type</option>
+                <option value="Maldive">Adventure Travel</option>
+                <option value="us">Family Vacation</option>
+                <option value="indonesia">Beach Vacation</option>
+              </select>
+              <div class="selecter-custome-arrow">
+                <i class="fa-solid fa-chevron-down"></i>
+              </div>
+            </div>
             <button class="btn-primary">
               <i class="fa-solid fa-magnifying-glass"></i> Find Now
             </button>
